# WindowsTest

./: CMakeLists.txt
lib/: gtest_main.lib
src/MFC/: CMakeLists.txt  windows_test.cpp  windows_test.h
test/: semaphare.cpp
